--- a/book/templates/book/edit.html
+++ b/book/templates/book/edit.html
@@ -1,15 +1,21 @@
-{% extends 'core/base.html' %}
-
-{% block title %}Edit book{% endblock %}
-
-{% block content %}
-    <h1 class="text-2xl">Edit book</h1>
-
-    <form method="post" action=".">
-        {% csrf_token %}
-
-        {{ form.as_p }}
-
-        <button class="py-4 px-6 bg-sky-700 text-white">Save changes</button>
-    </form>
-{% endblock %}
+<h1>Books</h1>
+<div class="row">
+    {% for book in books %}
+    <div class="col-md-3">
+        <div class="card">
+            <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
+            <div class="card-body">
+                <h5 class="card-title">{{ book.title }}</h5>
+                <p class="card-text">{{ book.author }}</p>
+                <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
+                {% if user.has_perm('book.change_book') %}
+                    <a href="{% url 'book:edit' book.pk %}" class="btn btn-warning">Edit</a>
+                {% endif %}
+                {% if user.has_perm('book.delete_book') %}
+                    <a href="{% url 'book:delete' book.pk %}" class="btn btn-danger">Delete</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
