--- a/book/templates/book/index.html
+++ b/book/templates/book/index.html
@@ -1,21 +1,32 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
+{% load static %}
 
 {% block title %}Books{% endblock %}
 
 {% block content %}
-    <h1 class="mb-6 text-2xl">Books</h1>
-
-    {% if books%}
-        {% for book in books %}
-            <div class="p-4 grid grid-cols-2 gap-4 bg-slate-100">
-                <h2>
-                    <a href="{% url 'book:detail' book.id %}">{{ book.title }}</a>
-                </h2>
-
-                <p>{{ book.get_status_display }}</p>
+<h1>Books</h1>
+<div class="row">
+    {% for book in books %}
+    <div class="col-md-3">
+        <div class="card">
+            {% if book.cover %}
+            <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
+            {% else %}
+            <img src="{% static 'core/images/no_image_book.jpg' %}" class="card-img-top" alt="No cover available">
+            {% endif %}
+            <div class="card-body">
+                <h5 class="card-title">{{ book.title }}</h5>
+                <p class="card-text">{{ book.author }}</p>
+                <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
+                {% if perms.book.change_book %}
+                <a href="{% url 'book:edit' book.pk %}" class="btn btn-warning">Edit</a>
+                {% endif %}
+                {% if perms.book.delete_book %}
+                <a href="{% url 'book:delete' book.pk %}" class="btn btn-danger">Delete</a>
+                {% endif %}
             </div>
-        {% endfor %}
-    {% else %}
-        <p>You don't have any books yet...</p>
-    {% endif %}
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
