--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,7 +1,55 @@
-{% extends 'core/base.html' %}
+{% extends "core/base.html" %}
 
-{% block title %}Welcome to Ilias Books{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-Read, learn, share
+<div class="container">
+    <h1>Trending Books</h1>
+    <div class="row">
+        {% for book in trending_books %}
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ book.title }}</h5>
+                        <p class="card-text">{{ book.author }}</p>
+                        <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <h1>Classic Books</h1>
+    <div class="row">
+        {% for book in classic_books %}
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ book.title }}</h5>
+                        <p class="card-text">{{ book.author }}</p>
+                        <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <h1>Books We Love</h1>
+    <div class="row">
+        {% for book in books_we_love %}
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ book.title }}</h5>
+                        <p class="card-text">{{ book.author }}</p>
+                        <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
