--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,13 +1,15 @@
 {% extends "core/base.html" %}
+{% load static %}
+{% load form_filters %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Trending Books</h1>
-    <div class="row">
-        {% for book in trending_books %}
-            <div class="col-md-3">
+<div class="container mx-auto py-6 px-8">
+    {% for category in categories %}
+        <h2 class="text-2xl font-bold mb-4">{{ category.name }}</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+            {% for book in category.book_set.all %}
                 <div class="card">
                     <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
                     <div class="card-body">
@@ -16,40 +18,8 @@
                         <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
-    </div>
-
-    <h1>Classic Books</h1>
-    <div class="row">
-        {% for book in classic_books %}
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ book.title }}</h5>
-                        <p class="card-text">{{ book.author }}</p>
-                        <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
-
-    <h1>Books We Love</h1>
-    <div class="row">
-        {% for book in books_we_love %}
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="{{ book.cover.url }}" class="card-img-top" alt="{{ book.title }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ book.title }}</h5>
-                        <p class="card-text">{{ book.author }}</p>
-                        <a href="{% url 'book:detail' book.pk %}" class="btn btn-primary">View Details</a>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+            {% endfor %}
+        </div>
+    {% endfor %}
 </div>
 {% endblock %}
