--- a/author/templates/author/detail.html
+++ b/author/templates/author/detail.html
@@ -5,16 +5,18 @@
 {% block content %}
     <h1 class="mb-6 text-2xl">{{ author.name }}</h1>
 
-    {% if author.books.count %}
-        {% for book in author.books.all %}
-            <div class="p-4 grid grid-cols-2 gap-4 bg-slate-100">
-                <h2>
-                    <a href="{% url 'book:detail' book.id %}">{{ book.title }}</a>
-                </h2>
-
-                <p>{{ book.get_status_display }}</p>
-            </div>
-        {% endfor %}
+    {% if author.book_set.count %}
+        <div class="space-y-4">
+            {% for book in author.book_set.all %}
+                <div class="p-4 bg-slate-100 rounded-lg shadow-sm">
+                    <h2 class="text-xl font-semibold">
+                        <a href="{% url 'book:detail' book.id %}" class="text-blue-600 hover:underline">{{ book.title }}</a>
+                    </h2>
+                    <p>Category: {{ book.category.name }}</p>
+                    <p>Description: {{ book.description }}</p>
+                </div>
+            {% endfor %}
+        </div>
     {% else %}
         <p>This author doesn't have any books yet...</p>
     {% endif %}
