--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>{% block title %}Welcome to Ilias Books{% endblock %}</title>
 </head>
 <body>
     <nav class="max-w-4xl mx-auto py-6 px-8 flex justify-between items-center bg-slate-800">
-        <a href="/" class="text-2xl text-white">Gaiazre</a>
+        <a href="/" class="text-2xl text-white">Read it</a>
         <div class="space-x-6 flex items-center ml-auto">
             <a href="{% url 'book:index' %}" class="text-white">Books</a>
             {% if user.is_staff %}
